[workspace]
members = ["crates/proc_macros", "crates/redpiler_graph", "crates/world_exporter"]

[package]
name = "mchprs"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[workspace.package]
authors = ["StackDoubleFlow <ojaslandge@gmail.com>"]
description = "A multithreaded minecraft server built for redstone."
edition = "2021"
homepage = "https://github.com/MCHPR/MCHPRS"
keywords = ["minecraft", "server", "redstone"]
readme = "README.md"
version = "0.4.1"
license = "MIT"
repository = "https://github.com/MCHPR/MCHPRS"

include = ["**/*.rs", "Cargo.toml"]

[profile.dev]
# MCHPRS runs far too slow without any optimizations to even be usable for testing
opt-level = 1

[profile.release]
# This seems to speed up Redpiler compile times
lto = "fat"

[dependencies]
mchprs_core = { path = "./crates/core" }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mchprs_world = { path = "./crates/world" }
mchprs_blocks = { path = "./crates/blocks" }
mchprs_redpiler = { path = "./crates/redpiler" }
mchprs_redstone = { path = "./crates/redstone" }
paste = { workspace = true }
criterion = { workspace = true }

[workspace.dependencies]
toml = "0.8"
byteorder = "1.4"
hematite-nbt = { git = "https://github.com/StackDoubleFlow/hematite_nbt" }
bitflags = "2.6"
serde = "1"
serde_json = "1.0"
md5 = "0.7"
bus = "2.2"
ctrlc = "3.1"
tracing = "0.1"
rand = "0.9"
regex = "1.4"
backtrace = "0.3"
rusqlite = "0.33"
anyhow = "1.0"
toml_edit = "0.22"
mysql = "26"
tokio = "1"
reqwest = "0.12"
itertools = "0.14"
bincode = "1.3"
once_cell = "1.14.0"
rustc-hash = "2.0"
hmac = "0.12"
sha2 = "0.10"
bitvec = "1"
flate2 = "1"
smallvec = "1.9.0"
enum_dispatch = "0.3"
petgraph = "0.7"
thiserror = "2"
syn = "2"
quote = "1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
paste = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "direct_backend"
harness = false
