[package]
name = "mchprs_block_data_gen"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
include.workspace = true

[dependencies]
quote.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yaml_ng = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
proc-macro2 = { workspace = true }
convert_case = { workspace = true }
indexmap = { workspace = true }
