[package]
name = "mchprs_blocks"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mchprs_utils = { path = "../utils" }
mchprs_proc_macros = { path = "../proc_macros" }
serde = { workspace = true }
hematite-nbt = { workspace = true }
