[package]
name = "mchprs_core"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mchprs_proc_macros = { path = "../proc_macros" }
toml = "0.7"
byteorder = "1.4"
hematite-nbt = "0.5"
bitflags = "1.2"
serde = "1"
serde_json = "1.0"
md5 = "0.7"
bus = "2.2"
ctrlc = { version = "3.1", features = ["termination"] }
tracing = "0.1"
chrono = "0.4"
rand = "0.8"
regex = { version = "1.4" }
backtrace = "0.3"
rusqlite = { version="0.28", features=["bundled"] }
anyhow = "1.0"
toml_edit = "0.19"
mysql = "23"
tokio = { version = "1", features = ["rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
itertools = "0.10"
impls = "1"
bincode = "1.3"
once_cell = "1.14.0"
rustc-hash = "1.1"
mchprs_save_data = { path = "../save_data" }
mchprs_blocks = { path = "../blocks" }
mchprs_world = { path = "../world" }
mchprs_utils = { path = "../utils" }
mchprs_network = { path = "../network" }
mchprs_text = { path = "../text" }
mchprs_redpiler = { path = "../redpiler" }
mchprs_redstone = { path = "../redstone" }
