[package]
name = "mchprs_core"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mchprs_proc_macros = { path = "../proc_macros" }
mchprs_save_data = { path = "../save_data" }
mchprs_blocks = { path = "../blocks" }
mchprs_world = { path = "../world" }
mchprs_utils = { path = "../utils" }
mchprs_network = { path = "../network" }
mchprs_text = { path = "../text" }
mchprs_redpiler = { path = "../redpiler" }
mchprs_redstone = { path = "../redstone" }
toml = { workspace = true }
byteorder = { workspace = true }
hematite-nbt = { workspace = true }
bitflags = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
md5 = { workspace = true }
bus = { workspace = true }
ctrlc = { workspace = true, features = ["termination"] }
tracing = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
backtrace = { workspace = true }
rusqlite = { workspace = true, features=["bundled"] }
anyhow = { workspace = true }
toml_edit = { workspace = true }
mysql = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
reqwest = { workspace = true, features = ["json"] }
itertools = { workspace = true }
bincode = { workspace = true }
once_cell = { workspace = true }
rustc-hash = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
