[package]
name = "mchprs_network"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mchprs_text = { path = "../text" }
hematite-nbt = { workspace = true }
flate2 = { workspace = true }
serde = { workspace = true }
byteorder = { workspace = true }
tracing = { workspace = true }
bitvec = { workspace = true }
