[package]
name = "mchprs_proc_macros"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
include.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
rustc-hash = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
nom = { workspace = true }
