[package]
name = "mchprs_redpiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mchprs_blocks = { path = "../blocks" }
mchprs_world = { path = "../world" }
mchprs_redstone = { path = "../redstone" }
redpiler_graph = { path = "../redpiler_graph" }
serde_json = { workspace = true }
tracing = { workspace = true }
petgraph = { workspace = true }
itertools = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
enum_dispatch = { workspace = true }
