[package]
name = "mchprs_redpiler"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mchprs_blocks = { path = "../blocks" }
mchprs_world = { path = "../world" }
mchprs_redstone = { path = "../redstone" }
redpiler_graph = { path = "../redpiler_graph" }
serde_json = { workspace = true }
tracing = { workspace = true }
petgraph = { workspace = true }
itertools = { workspace = true }
rustc-hash = { workspace = true }
enum_dispatch = { workspace = true }
indexmap = { workspace = true }
smallvec = { workspace = true }
