[package]
name = "mchprs_redstone"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
include.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mchprs_blocks = { path = "../blocks" }
mchprs_world = { path = "../world" }
tracing = { workspace = true }
rustc-hash = { workspace = true }
