[package]
name = "rilc"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
include.workspace = true

[dependencies]
mchprs_redpiler = { path = "../redpiler" }
clap = { workspace = true }
