[package]
name = "mchprs_save_data"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
bincode = "1.3"
serde = "1"
thiserror = "1"
rustc-hash = "1.1"
mchprs_world = { path = "../world" }
mchprs_blocks = { path = "../blocks" }
serde-big-array = "0.5"
tracing = "0.1"
