[package]
name = "mchprs_schematic"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
include.workspace = true

[dependencies]
mchprs_world = { path = "../world", features = ["testing"] }
mchprs_blocks = { path = "../blocks" }
serde = { workspace = true }
itertools = { workspace = true }
anyhow = { workspace = true }
rustc-hash = { workspace = true }
regex = { workspace = true }
hematite-nbt = { workspace = true }
