[package]
name = "mchprs_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
mchprs_blocks = { path = "../blocks" }
mchprs_network = { path = "../network", optional = true }
rustc-hash = "1.1"
hematite-nbt = "0.5"
itertools = "0.10"

[features]
default = ["networking"]
networking = ["dep:mchprs_network"]
