[package]
name = "mchprs_world"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
mchprs_blocks = { path = "../blocks" }
mchprs_network = { path = "../network", optional = true }
rustc-hash = "2.0"
hematite-nbt = "0.5"
itertools = "0.13"

[features]
default = ["networking"]
networking = ["dep:mchprs_network"]
